# 1CKomunikator-Server

./: .gitignore  Makefile  README.md  Twoja stara  main_db.sqlite  mypy.ini  pyproject.toml  requirements.txt  schema.sql  test_db.py
.github/workflows/: python-app.yml
noDb/groups/: 0.groupToUserAndMsgAddr  0.msgAddrToText
sql_functions/: add_user.sql  get_user.sql
src/: constants.py  db.py  important.txt  main.py  main.pyx  noDbMessages.py  utils.py
static/: styles.css
templates/: index.html
tests/: sample_data.py  test_db.py
