[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Komunikator1C"
version = "0.0.1"
dependencies = [
    "flask",
    "waitress",
    "Jinja2",
    "sqlescapy",
]
authors = [
    { name = "Michał Opar" },
    { name = "Wojciech Dudek" }
]
description = "Comunicator for class 1c"

[project.optional-dependencies]
testing = ["pytest"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
[tool.ruff]
exclude = ["venv", ".venv"]
line-length = 120
target-version = "py312"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "TCH004",  # it's private: tests\test_db.py:22:37: TCH004 `_pytest.monkeypatch.MonkeyPatch` out of type-checking block
    "D415", # duplicate of D401 First line should end with a period, question mark, or exclamation point
]
fixable = ["ALL"]
unfixable = []


[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "S101",  # Use of `assert` detected
    "ARG001",  # Unused function argument: `kwargs`
    "ANN002",  # Missing type annotation for `*args`
    "ANN003",  # Missing type annotation for `**kwargs`
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function `mock_connect`
    "SLF001",  # Private member accessed
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
    "D104",  # Missing docstring in public package
]
"./src/db.py" = [
    "T201",  # `print` found
    "PLR2004",  # Magic value used in comparison, consider replacing `x` with a constant variable
    "S101",  # Use of `assert` detected

]


[tool.pylint]
# ruff handles that
disable = [
    "E0237", "E1142", "E0014", "E1300", "E0013", "E1310", "E1307", "E2502", "E6005", "E6004", "E0116", "E0108", "E0241",
    "E1303", "E0102", "E0100", "E0605", "E0604", "E0304", "E0308", "E2510", "E2513", "E2514", "E2512", "E2515", "E0309",
    "E0305", "E0303", "E1206", "E1205", "E0704", "E1304", "E1302", "E4703", "E0213", "E0107", "E0115", "E0117", "E0103",
    "E0711", "E0643", "E0402", "E1132", "E0106", "E0101", "E0104", "E1519", "E1520", "E0001", "E1306", "E1305", "E0112",
    "E1301", "E0603", "E0602", "E0302", "E0118", "E1700", "E0105", "W1401", "W0129", "W0199", "W3201", "W1302", "W1300",
    "W1501", "W0211", "W0702", "W0711", "W1502", "W0718", "W0719", "W0640", "W0160", "W0102", "W0705", "W0109", "W1308",
    "W0130", "W1641", "W0123", "W0122", "W0106", "W1309", "W0511", "W1515", "W1305", "W1310", "W0604", "W0603", "W0602",
    "W1404", "W0406", "W1405", "W1508", "W1113", "W1202", "W1203", "W1201", "W0150", "W1518", "W0410", "W1303", "W0131",
    "W0177", "W3301", "W2402", "W0133", "W0104", "W0212", "W0707", "W0622", "W2901", "W1406", "W0404", "W0127", "W1509",
    "W1510", "W0245", "W0706", "W0012", "W0108", "W0107", "W0301", "W1514", "W0613", "W1304", "W1301", "W0611", "W0612",
    "W0120", "W2101", "W2601", "W0401", "C0202", "C0198", "C1901", "C0201", "C0501", "C0206", "C0199", "C0112", "C0415",
    "C2701", "C0103", "C0301", "C2201", "C0115", "C0304", "C0116", "C0114", "C0410", "C0321", "C2403", "C2401", "C0205",
    "C0121", "C0305", "C0303", "C0131", "C0105", "C0132", "C0412", "C0123", "C3002", "C2801", "C3001", "C0113", "C0208",
    "C0414", "C0411", "C0413", "R0133", "R0124", "R6003", "R1701", "R6002", "R6104", "R1717", "R0402", "R1728", "R1715",
    "R1714", "R1730", "R1731", "R1718", "R1722", "R1706", "R1732", "R5501", "R2044", "R1710", "R0123", "R2004", "R0202",
    "R1723", "R1724", "R1720", "R1705", "R6301", "R0203", "R0206", "R1704", "R1719", "R1703", "R1725", "R1260", "R0913",
    "R0916", "R0912", "R0914", "R1702", "R0904", "R0911", "R0915", "R1707", "R1721", "R1733", "R1736", "R1729", "R1735",
    "R1734", "R6201", "R0205", "R0022", "R1711",
]